# crappy-audio-player

./: README.md  pyproject.toml
crappy_audio_player/: app.py  audio.py
tests/: test_audio.py  test_crappy_audio_player.py
