[tool.poetry]
name = "crappy_audio_player"
version = "0.1.0"
description = ""
authors = ["alx-b"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"
mutagen = "^1.45.1"
py-cui = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyflakes = "^2.3.1"
black = "^21.6b0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
